# vx-cli

./: .rustfmtl.toml  Cargo.toml
data/default/: fxmanifest.lua
data/default/client/: b.lua
data/default/server/: a.lua  b.lua
src/: main.rs
src/commands/: pack.rs
src/commands/pack/: interceptor.lua  manifest.rs  mod.rs  web.rs
