[package]
name = "vx-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.3"
clap_derive = "4.5.3"
anyhow = "1.0.81"
log = "0.4.21"
simple_logger = "4.3.3"
rlua = "0.20.0"
zip = "0.6.6"
walkdir = "2.5.0"
glob = "0.3.1"